# data-masking

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  __main__.py  config.py  config_example.py  config_example.yaml  data_masking.py  diagnose_mapping.py  input_example.2.txt  input_example.txt  masking_logger.py  mypy.ini  password_generator.py  pyinstaller_utf8_hook.py  pyproject.toml  pytest.ini  rank_data.py  re_mask.py  requirements-dev.txt  requirements.txt  security.py  selective.py  tools.py  unmask_data.py
.github/workflows/: ci.yml  release.yml
datamasking/: __init__.py  __main__.py  _version.py  diagnose.py  rank_data.py
datamasking/extras/: config.py  masking_logger.py  password_generator.py  rank_data.py  re_mask.py  selective.py  tools.py
datamasking/masking/: __init__.py  cli.py  constants.py  context.py  engine.py  helpers.py  language.py  mask_military.py  mask_personal.py
datamasking/unmasking/: __init__.py  cli.py  engine.py  helpers.py  io.py
docs/: INSTALL.md  README.md  README_UK.md
masking/: __init__.py  cli.py  constants.py  context.py  engine.py  helpers.py  language.py  mask_military.py  mask_personal.py
modules/: __init__.py  config.py  masking_logger.py  password_generator.py  rank_data.py  re_mask.py  security.py  selective.py  tools.py
tests/: README.md  __init__.py  conftest.py  test_case_preservation.py  test_compat_shims.py  test_config.py  test_diagnose.py  test_helpers.py  test_initials.py  test_integration.py  test_masking_functions.py  test_masking_logger.py  test_parse.py  test_password_generator.py  test_patronymic.py  test_quoted.py  test_rank_data.py  test_selective.py  test_unmask.py
unmasking/: __init__.py  cli.py  engine.py  helpers.py  io.py
